--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -6,7 +6,7 @@
   }, "rich-text": {
     "props": {
       "text": "**Hello World!**",
-      "textPosition": "RIGHT"
+      "textPosition": "RIGH"
     }
   }
 }
