--- a/store/blocks/slider-layout.jsonc
+++ b/store/blocks/slider-layout.jsonc
@@ -1,8 +1,8 @@
 {
     "slider-layout#home": {
         "children": [
-            "image#brand1",
-            "image#brand2",
+            "image#brand",
+            "image#bran2",
             "image#brand3",
             "image#brand4",
             "image#brand5",
