--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,6 +1,7 @@
 {
   "store.product": {
     "children": [
+      "breadcrumb",
       "flex-layout.row#main"
     ]
   },
@@ -22,6 +23,8 @@
     "children": [
       "product-name",
       "product-price",
+      "flex-layout.row#qty-sku",
+      "shipping-simulator",
       "buy-button"
     ],
     "props":{
@@ -29,10 +32,21 @@
       "preventVerticalStretch": true
     }
   },
+  "product-name":{
+    "props":{
+      "product-indetifier.product": "right"
+    }
+  },
   "product-price": {
     "props": {
       "showSavings": true,
       "showListPrice": true
     }
+  },
+  "flex-layout.row#qty-sku":{
+    "children":[
+      "sku-selector",
+      "product-quantity"
+    ]
   }
 }
