--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -2,7 +2,8 @@
   "store.product": {
     "children": [
       "breadcrumb",
-      "flex-layout.row#main"
+      "flex-layout.row#main",
+      "shelf.relatedProducts"
     ]
   },
   "flex-layout.row#main": {
@@ -16,7 +17,7 @@
   },
   "flex-layout.col#left": {
     "children": [
-      "product-images"
+      "stack-layout#brand"
     ]
   },
   "flex-layout.col#right": {
@@ -28,7 +29,7 @@
       "shipping-simulator",
       "buy-button"
     ],
-    "props":{
+    "props": {
       "verticalAlign": "middle",
       "preventVerticalStretch": true
     }
@@ -39,10 +40,29 @@
       "showListPrice": true
     }
   },
-  "flex-layout.row#qty-sku":{
-    "children":[
+  "flex-layout.row#qty-sku": {
+    "children": [
       "sku-selector",
       "product-quantity"
     ]
+  },
+  "stack-layout#brand": {
+    "children": [
+      "product-images",
+      "product-brand"
+    ]
+  },
+  "product-brand": {
+    "props": {
+      "height": 30,
+      "displayMode": "logo"
+    }
+  },
+  "sku-selector": {
+    "props": {
+      "initialSelection": "empty",
+      "showValueForVariation": "image",
+      "showVariationsErrorMessage": true
+    }
   }
 }
