--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -70,13 +70,13 @@
     "tab-content.item#home1": {
         "props": {
             "tabId": "majorAppliances",
-            "rich-text#home1": ""
+            "rich-text#home1"
         }
     },
     "tab-content.item#home2": {
         "props": {
             "tabId": "eletronics",
-            "rich-text#home2": ""
+            "rich-text#home2"
         }
     },
     "rich-text#home1": {
