--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -69,15 +69,19 @@
     },
     "tab-content.item#home1": {
         "props": {
-            "tabId": "majorAppliances",
+            "tabId": "majorAppliances"
+        },
+        "children": [
             "rich-text#home1"
-        }
+        ]
     },
     "tab-content.item#home2": {
         "props": {
-            "tabId": "eletronics",
+            "tabId": "eletronics"
+        },
+        "children": [
             "rich-text#home2"
-        }
+        ]
     },
     "rich-text#home1": {
         "props": {
