--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -57,8 +57,8 @@
     },
     "tab-list.item#home2": {
         "props": {
-            "tabId": "eletronics",
-            "label": "Eletronics"
+            "tabId": "electronics",
+            "label": "Electronics"
         }
     },
     "tab-content#home": {
@@ -68,20 +68,20 @@
         ]
     },
     "tab-content.item#home1": {
-        "props": {
-            "tabId": "majorAppliances"
-        },
         "children": [
             "rich-text#home1"
-        ]
+        ],
+        "props": {
+            "tabId": "majorAppliances"
+        }
     },
     "tab-content.item#home2": {
-        "props": {
-            "tabId": "eletronics"
-        },
         "children": [
             "rich-text#home2"
-        ]
+        ],
+        "props": {
+            "tabId": "eletronics"
+        }
     },
     "rich-text#home1": {
         "props": {
