--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -80,7 +80,7 @@
             "rich-text#home2"
         ],
         "props": {
-            "tabId": "eletronics"
+            "tabId": "electronics"
         }
     },
     "rich-text#home1": {
