--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -14,7 +14,8 @@
     "header-layout.desktop": {
         "children": [
             "header-row#notification",
-            "header-row#main"
+            "header-row#main",
+            "header-row#menu"
         ]
     },
     "header-layout.mobile": {
@@ -45,12 +46,20 @@
             "fullWidth": false
         }
     },
+     "header-row#menu": {
+        "children": [
+            "header-spacer",
+            "vtex.menu@2.x:menu#categories",
+            "header-spacer"
+        ]
+    },
     "header-row#main-mobile": {
         "children": [
             "logo",
             "header-spacer",
             "minicart",
-            "login"
+            "login",
+            "drawer"
         ],
         "props": {
             "sticky": true,
