--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -9,7 +9,12 @@
             "orientation": "horizontal"
         }
     },
-    "menu-item#major-appliances": {
+    "vtex.menu@2.x:submenu#major": {
+        "children": [
+            "vtex.menu@2.x:menu#major"
+        ]
+    },
+    "vtex.menu@2.x:menu#major": {
         "children": [
             "menu-item#refrigerators",
             "menu-item#ovens",
@@ -17,17 +22,14 @@
         ],
         "props": {
             "orientation": "vertical"
-        },
-        "blocks": [
-            "vtex.menu@2.x:submenu#major"
-        ]
+        }
     },
-    "vtex.menu@2.x:submenu#major": {
+    "vtex.menu@2.x:submenu#small": {
         "children": [
-            "vtex.menu@2.x:menu#major"
+            "vtex.menu@2.x:menu#small"
         ]
     },
-    "menu-item#small-appliances": {
+    "vtex.menu@2.x:menu#small": {
         "children": [
             "menu-item#mixers",
             "menu-item#toasters",
@@ -35,17 +37,14 @@
         ],
         "props": {
             "orientation": "vertical"
-        },
-        "blocks": [
-            "vtex.menu@2.x:submenu#small"
-        ]
+        }
     },
-    "vtex.menu@2.x:submenu#small": {
+    "vtex.menu@2.x:submenu#electronics": {
         "children": [
-            "vtex.menu@2.x:menu#small"
+            "vtex.menu@2.x:menu#electronics"
         ]
     },
-    "menu-item#electronics": {
+    "vtex.menu@2.x:menu#electronics": {
         "children": [
             "menu-item#cameras",
             "menu-item#laptops",
@@ -53,14 +52,6 @@
         ],
         "props": {
             "orientation": "vertical"
-        },
-        "blocks": [
-            "vtex.menu@2.x:submenu#electronics"
-        ]
-    },
-    "vtex.menu@2.x:submenu#electronics": {
-        "children": [
-            "vtex.menu@2.x:menu#electronics"
-        ]
+        }
     }
 }
