--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -55,11 +55,11 @@
     },
     "header-row#main-mobile": {
         "children": [
+            "drawer",
             "logo",
             "header-spacer",
             "minicart",
-            "login",
-            "drawer"
+            "login"
         ],
         "props": {
             "sticky": true,
