--- a/store/blocks/menu-items.jsonc
+++ b/store/blocks/menu-items.jsonc
@@ -7,7 +7,7 @@
         "text": "Major Aplliances"
       }
     },
-    "blocks": ["vtex.menu@2.x:submenu#major"]
+    "blocks": ["vtex.menu@2.x:submenu#major"]//comentário
   },
   "menu-item#small-appliances": {
       "props":
@@ -18,7 +18,8 @@
         "categoryId": 2, 
         "text": "Small Appliances"
       }
-    }
+    },
+    "blocks": ["vtex.menu@2.x:submenu#small"]
   },
   "menu-item#electronics": {
       "props":
@@ -29,7 +30,8 @@
         "categoryId": 3, 
         "text": "Electronics"
       }
-    }
+    },
+    "blocks": ["vtex.menu@2.x:submenu#electronics"]
   },
   "menu-item#refrigerators": {
       "props":
